<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/remaining_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_marginTop="32sp"
                android:text="@string/remaining_header"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remaining_header"
                android:layout_marginTop="12sp"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/take_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remaining"
                android:layout_marginTop="10sp"
                android:text="@string/take" />

            <TextView
                android:id="@+id/buy_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/take_button"
                android:layout_marginTop="12sp"
                android:text="@string/make_header"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/make_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buy_coffee"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:hint="@string/make_text"
                android:ems="15"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/make_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/make_text"
                android:text="@string/make" />

            <TextView
                android:id="@+id/fill_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/make_button"
                android:layout_marginTop="12sp"
                android:text="@string/fill_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/water_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fill_text"
                android:layout_marginTop="10sp"
                android:text="@string/water"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/water_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/water_text"
                android:layout_marginTop="10sp"
                android:hint="@string/value"
                android:ems="15"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/milk_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/water_input"
                android:layout_marginTop="10sp"
                android:text="@string/milk"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/milk_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/milk_text"
                android:layout_marginTop="10sp"
                android:hint="@string/value"
                android:ems="15"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/coffee_beans_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/milk_input"
                android:layout_marginTop="10sp"
                android:text="@string/coffee_beans"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/coffee_beans_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coffee_beans_text"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:hint="@string/value"
                android:ems="15"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/disposable_cups_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coffee_beans_input"
                android:layout_marginTop="10sp"
                android:text="@string/disposable_cups"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/disposable_cups_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disposable_cups_text"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:hint="@string/value"
                android:ems="15"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fill_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disposable_cups_input"
                android:text="@string/fill" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>